# Personal-asst

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
config/: config.example.yaml
src/: main.py
src/core/: assistant.py  config.py  conversation.py  plugin_base.py  plugin_manager.py
src/plugins/: task_plugin.py
src/ui/: cli.py
src/utils/: exceptions.py  logging.py
tests/: test_task_plugin.py
